feat: adjust the endpoints schema
